fix: 修复 Exchange 方法名 setCode 应为 setExchangeCode